--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,2 +1,32 @@
-node_modules
-*.env
+# Dependências
+node_modules/
+
+# Build
+dist/
+*.js.map
+
+# Ambiente
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Sistema Operacional
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Testes
+coverage/
+.nyc_output/
