--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,7 +6,14 @@
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
-  "include": ["src/**/*.ts", "src/types.d.ts"]
+  "include": ["src/**/*.ts", "src/types.d.ts"],
+  "exclude": ["node_modules", "dist"]
 }
